gitops/radarr/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: radarr
  labels:
    app: radarr
spec:
  replicas: 1
  selector:
    matchLabels:
      app: radarr
  template:
    metadata:
      labels:
        app: radarr
    spec:
      containers:
      - name: radarr
        image: ghcr.io/linuxserver/radarr:6.4.4-develop
        imagePullPolicy: Always
        ports:
        - containerPort: 7878
        volumeMounts:
        - name: radarr-config
          mountPath: /config
        - name: data
          mountPath: /data
      volumes:
      - name: radarr-config
        persistentVolumeClaim:
          claimName: radarr-config
      - name: data
        hostPath:
          path: /data
          type: Directory
