gitops/radarr/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: radarr
spec:
  ports:
  - name: app
    port: 80
    targetPort: 9696
    protocol: TCP
    appProtocol: http
  selector:
    app: radarr
