gitops/radarr/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: radarr
  namespace: radarr
spec:
  parentRefs:
  - name: main
    namespace: cilium-gateway
    sectionName: https-radarr
  hostnames:
  - radarr.sync.lt
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /
    backendRefs:
    - name: radarr
      port: 80
